# omk-mentor

./: .gitignore  pyproject.toml
app/app/: settings.py  urls.py
app/authentication/: models.py  urls.py  views.py
app/groups/: exceptions.py  models.py  serializer.py  serializers.py  urls.py  views.py
app/groups/bussines_logic/creating_group/: creating_group.py  importing_excel_data.py  items.py
app/groups/migrations/: 0001_initial.py  0002_initial.py  0003_subgroup.py  0004_subgroup_mentor.py
app/learning/: models.py  permissions.py
app/learning/migrations/: 0001_initial.py  0002_initial.py  0003_alter_enrollment_role.py  0004_alter_enrollment_role.py  0005_enrollment_subgroup.py  0006_remove_enrollment_group.py  0007_alter_enrollment_role.py
app/statistic/: models.py
app/statistic/migrations/: 0001_initial.py
app/templates_files/: users_template.xlsx  your_group_name.xlsx
app/users/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_alter_authuser_username.py  0003_alter_authuser_username.py  0004_authuser_is_auth_alter_authuser_tab_number_and_more.py  0005_remove_profile_about_me_profile_account_role.py  0006_alter_profile_avatar.py  0007_profile_active_membership_alter_profile_avatar.py
